data/exec-logs/naive/budincsevity_szeged-weather/simple-linear-regression-using-weatherhistory-data.exec.log
  File "simple-linear-regression-using-weatherhistory-data.py", line 111
    imputerHumidity=scale(missing_values='NaN',strategy='mean',X=0,with_std=True,with_std=True,copy=True,axis=True)
                                                                                ^
SyntaxError: keyword argument repeated
